# together-api

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml  test_client.py
api/: __init__.py  auth.py  channels.py  message.py
config/: __init__.py  database.py
models/: __init__.py  channel.py  message.py  user.py  users_channels.py
schemas/: __init__.py  base.py  channel.py  message.py  res.py  user.py
sio/: __init__.py
